<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ChoseTableActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/tables"
        android:textColor="?attr/myColorTheme"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonToRussia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToSpain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/my_button_style"
        android:text="@string/spain"
        android:onClick="onClickToSpain"
        android:textColor="?attr/myColorTheme"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToGermany" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToGermany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/my_button_style"
        android:onClick="onClickToGermany"
        android:text="@string/germany"
        android:textColor="?attr/myColorTheme"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToEngland" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToRussia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/my_button_style"
        android:text="@string/russia"
        android:onClick="onClickToRussia"
        android:textColor="?attr/myColorTheme"
        android:textSize="48sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonToEngland"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/my_button_style"
        android:onClick="onClickToEngland"
        android:text="@string/england"
        android:textColor="?attr/myColorTheme"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToRussia" />


</androidx.constraintlayout.widget.ConstraintLayout>